dark mode fixed

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -238,113 +238,6 @@
 
 
 
-/*-- -------------------------- -->
-<---      Dark Mode Toggle      -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    body {
-        &.dark-mode {
-            #dark-mode-toggle {
-                .cs-sun {
-                    opacity: 1;
-                    transform: translate(-50%, -50%);
-                }
-
-                .cs-moon {
-                    opacity: 0;
-                    transform: translate(-50%, -150%);
-                }
-            }
-        }
-
-        &.scroll {
-            #dark-mode-toggle {
-                .cs-moon {
-                    fill: #1a1a1a;
-                }
-            }
-        }
-
-        &.cs-open {
-            #dark-mode-toggle {
-                .cs-moon {
-                    fill: #1a1a1a;
-                }
-            }
-        }
-    }
-
-    #dark-mode-toggle {
-        width: calc(48 / 16 * 1rem);
-        height: calc(48 / 16 * 1rem);
-        padding: 0;
-        background: transparent;
-        border: none;
-        display: block;
-        position: absolute;
-        right: calc(76 / 16 * 1rem);
-        bottom: calc(16 / 16 * 1rem);
-        z-index: 1000;
-        overflow: hidden;
-
-        img,
-        svg {
-            width: calc(20 / 16 * 1rem);
-            height: calc(20 / 16 * 1rem);
-            //center image inside button
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            pointer-events: none;
-        }
-
-        .cs-moon {
-            z-index: 2;
-            // Transition properties
-            transition:
-                transform 0.3s,
-                opacity 0.3s,
-                fill 0.3s;
-            fill: black;
-        }
-
-        .cs-sun {
-            opacity: 0;
-            z-index: 1;
-            // Transition property
-            transform: translate(-50%, 100%);
-            transition:
-                transform 0.3s,
-                opacity 0.3s;
-        }
-    }
-}
-
-/* Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-    body.scroll {
-        #dark-mode-toggle {
-            .cs-moon {
-                fill: #1a1a1a;
-            }
-        }
-    }
-
-    #dark-mode-toggle {
-        margin: 0;
-        position: relative;
-        right: auto;
-        bottom: auto;
-        transform: none;
-
-        &:hover {
-            cursor: pointer;
-        }
-    }
-}
 
 /*-- -------------------------- -->
 <---      Dark Mode Toggle      -->
